@@ -52,14 +52,14 @@ ActionCodeRec  DefaultActionCodeTable[]=
    {TEXT_BEGIN,"$kHOM"},
    {TEXT_BEGIN,"\033|$kbeg"},
    {TEXT_BEGIN,"\033|$khome"},
+   {TEXT_BEGIN,"\007|B"},
    {TEXT_BEGIN,"\007|^B"},
    {TEXT_BEGIN,"\007|b"},
-   {TEXT_BEGIN,"\007|B"},
    {TEXT_END,"$kEND"},
    {TEXT_END,"\033|$kend"},
+   {TEXT_END,"\007|E"},
    {TEXT_END,"\007|^E"},
    {TEXT_END,"\007|e"},
-   {TEXT_END,"\007|E"},
    {NEXT_PAGE,"$knp"},
    {NEXT_PAGE,"$kc3"},
    {NEXT_PAGE,"$knxt"},
@@ -72,19 +72,19 @@ ActionCodeRec  DefaultActionCodeTable[]=
    {PAGE_TOP,"$kPRV"},
    {PAGE_BOTTOM,"\033|$knp"},
    {PAGE_BOTTOM,"$kNXT"},
+   {TO_LINE_NUMBER,"\007|G"},
    {TO_LINE_NUMBER,"\007|\007"},
    {TO_LINE_NUMBER,"\007|g"},
-   {TO_LINE_NUMBER,"\007|G"},
    {TO_LINE_NUMBER,"\007|l"},
    {TO_LINE_NUMBER,"\007|L"},
    {TO_LINE_NUMBER,"$kf8"},
    {TO_LINE_NUMBER,"\033|8"},
-   {TO_OFFSET,"\007|\017"},
    {TO_OFFSET,"\007|O"},
+   {TO_OFFSET,"\007|\017"},
    {TO_OFFSET,"\007|o"},
+   {TO_PREVIOUS_LOC,"\007|P"},
    {TO_PREVIOUS_LOC,"\007|\020"},
    {TO_PREVIOUS_LOC,"\007|p"},
-   {TO_PREVIOUS_LOC,"\007|P"},
    {LINE_UP,"$kcuu1"},
    {LINE_DOWN,"$kcud1"},
 
@@ -145,23 +145,39 @@ ActionCodeRec  DefaultActionCodeTable[]=
 // Block ops
    {COPY_BLOCK,"$kf11"},
    {MOVE_BLOCK,"$kf12"},
+   {DELETE_BLOCK,"${kf4}D"},
+   {DELETE_BLOCK,"${kf4}d"},
    {DELETE_BLOCK,"$1kf12"},
-   {DELETE_BLOCK,"\033$kf12"},
+   {DELETE_BLOCK,"\033|$kf12"},
    {SET_BLOCK_END,"$kf6"},
    {SET_BLOCK_END,"\033|6"},
+   {SET_BLOCK_END,"${kf4}E"},
+   {SET_BLOCK_END,"${kf4}e"},
    {SET_BLOCK_BEGIN,"$kf5"},
    {SET_BLOCK_BEGIN,"\033|5"},
-//   {READ_BLOCK,"read-block"},
-//   {WRITE_BLOCK,"write-block"},
+   {SET_BLOCK_BEGIN,"${kf4}B"},
+   {SET_BLOCK_BEGIN,"${kf4}b"},
+   {READ_BLOCK,"${kf4}R"},
+   {READ_BLOCK,"${kf4}r"},
+   {WRITE_BLOCK,"${kf4}W"},
+   {WRITE_BLOCK,"${kf4}w"},
    {PIPE_BLOCK,"\033|\\|"},
-//   {INDENT_BLOCK,"indent-block"},
-//   {UNINDENT_BLOCK,"unindent-block"},
+   {PIPE_BLOCK,"${kf4}\\|"},
+   {INDENT_BLOCK,"${kf4}I"},
+   {INDENT_BLOCK,"${kf4}i"},
+   {UNINDENT_BLOCK,"${kf4}U"},
+   {UNINDENT_BLOCK,"${kf4}u"},
    {INSERT_PREFIX,"\033|>"},
-//   {TO_UPPER,"convert-to-upper"},
-//   {TO_LOWER,"convert-to-lower"},
-//   {EXCHANGE_CASE,"exchange-cases"},
-//   {BLOCK_HIDE,"hide-block"},
-//   {BLOCK_TYPE,"change-block-type"},
+   {TO_UPPER,"${kf4}P"},
+   {TO_UPPER,"${kf4}p"},
+   {TO_LOWER,"${kf4}L"},
+   {TO_LOWER,"${kf4}l"},
+   {EXCHANGE_CASE,"${kf4}X"},
+   {EXCHANGE_CASE,"${kf4}x"},
+   {BLOCK_HIDE,"${kf4}H"},
+   {BLOCK_HIDE,"${kf4}h"},
+   {BLOCK_TYPE,"${kf4}T"},
+   {BLOCK_TYPE,"${kf4}t"},
    {BLOCK_FUNC_BAR,"$kf4"},
    {BLOCK_FUNC_BAR,"\033|4"},
    {MARK_LINE,"\033|$kf5"},
@@ -169,7 +185,11 @@ ActionCodeRec  DefaultActionCodeTable[]=
    {MARK_TO_EOL,"\033|$kf6"},
    {MARK_TO_EOL,"$1kf6"},
    {YANK_BLOCK,"$1kf11"},
-   {YANK_BLOCK,"\033$kf11"},
+   {YANK_BLOCK,"\033|$kf11"},
+   {YANK_BLOCK,"${kf4}Y"},
+   {YANK_BLOCK,"${kf4}y"},
+   {START_DRAG_MARK,"${kf4}V"},
+   {START_DRAG_MARK,"${kf4}v"},
 
 // Search
    {SEARCH_FORWARD,"$kf7"},
